--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ body{
 
 .main-content-box{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     align-items:center;  
     justify-content: space-evenly; 
