--- a/index.css
+++ b/index.css
@@ -97,6 +97,7 @@ body{
         margin: 0;
         width: calc(100% );
         border-radius: 0;  
+        box-shadow: none;
     }    
     .main{
         flex-direction: column;
