--- a/Dashboard/index.css
+++ b/Dashboard/index.css
@@ -9,6 +9,7 @@
 
 body{
     display: flex;
+    background: black;
 }
 
 i{  
@@ -48,7 +49,9 @@ a {
     flex-wrap: nowrap; 
     gap: 1rem;
 }
-
+.logout{
+    height: 22%;
+}
 .logo{
     height: 80px;
     padding: 12px;
@@ -89,7 +92,7 @@ a {
 .grids{    
     border-radius: 8px;
     display: flex;
-    /* background: aqua; */
+    background: aqua;
 }
 
 
